--- a/application.yml
+++ b/application.yml
@@ -42,6 +42,8 @@ logging.level.org.springframework: INFO
 
 spring:
   config:
+    activate:
+      on-profile: production
   datasource:
     url: jdbc:mysql://localhost:3306/petclinic?useSSL=false
     username: root
