--- a/application.yml
+++ b/application.yml
@@ -43,7 +43,7 @@ logging.level.org.springframework: INFO
 spring:
   config:
     activate:
-      on-profile: production
+      on-profile: default
   datasource:
     url: jdbc:mysql://localhost:3306/petclinic?useSSL=false
     username: root
